# ngsolve

bem/: CMakeLists.txt  ifgfoperator.hpp  ngbem.cpp  ngbem.hpp
